--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         crossorigin="anonymous"></script>
       
         <link rel="stylesheet"  type= "text/css" href="style.css">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,500&display=swap');
-        </style>
+        <style> /*
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+            */ </style> 
             
     </head>
 
